gccida/c1/bitmap_clear
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/bitmap_clear/src/bitmap.c:712:12: error: expected expression
*( _OWORD *)&head->first = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/bitmap_clear/src/bitmap.c:712:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&head->first = 0LL; 
   ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/bitmap_clear/src/obj/bitmap.o] Error 1
